--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
   "deno.enable": true,
   "deno.lint": true,
   "deno.unstable": false,
+  "supermaven.enable": {
+    "*": false
+  },
   "editor.formatOnSave": true,
   "editor.formatOnType": true
 }
